# didactic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/concepts/: architecture.md  fingerprints.md  index.md  lens-laws.md  theories.md
docs/guide/: axioms.md  cli.md  codegen.md  computed-derived.md  diff.md  fastapi.md  fields.md  generics.md  index.md  inheritance.md  lenses.md  migrations.md  models.md  pydantic.md  refs.md  repository.md  self-describing.md  settings.md  types.md  unions.md  validators.md
docs/project/: changelog.md  contributing.md  stability.md
docs/reference/: axioms.md  backref.md  cli.md  codegen.md  computed.md  derived.md  diff.md  fastapi.md  field.md  fingerprint.md  index.md  lens.md  migrations.md  model.md  pydantic-adapter.md  refs.md  repository.md  root-model.md  self-describing.md  settings.md  synthesis.md  testing.md  theory.md  types.md  unions.md  validators.md
docs/tutorial/: 01-first-model.md  02-fields.md  03-validation.md  04-serialisation.md  05-migrations.md  index.md
examples/: 01_basic_model.py  02_migration.py  03_lens.py  04_pydantic_interop.py  README.md
